# formal-method-by-claude-code

./: README.md  bank-system.cabal
app/: Main.hs
docs/: README.md  architecture.md  formal-verification.md  specification.md  testing.md
src/BankSystem/Concurrent/: STM.hs
src/BankSystem/Core/: Account.hs  Invariants.hs  Transaction.hs
src/BankSystem/Distributed/: Consensus.hs  Node.hs
src/BankSystem/Verification/: Properties.hs
test/: Spec.hs
test/BankSystem/Core/: AccountSpec.hs  TransactionSpec.hs
test/BankSystem/Verification/: PropertiesSpec.hs
